# calc

./: CMakeLists.txt  README.md  math-expressions-outline.txt
.github/workflows/: make-release.yaml
calc/: CMakeLists.txt  ExpressionTokenizer.hpp  FunctionMap.hpp  Number.hpp  OperatorPrecedence.hpp  TreeNode.hpp  VarMap.hpp  calc.cpp  evaluate_rpn.hpp  func.hpp  global.h  operators.hpp  settings.h  stack_helpers.h  to_rpn.hpp
calc/helpers/: stack_helpers.h
calc/tokenizer/: complex-token.hpp  expr_builder.hpp  expr_node.hpp  lexer.hpp  primitive_tokenizer.hpp  token.hpp
calc/tokenizer/types/: ComplexTokenType.h  LexemeType.h  PrimitiveTokenType.h
calc/tokenizer_impl/: custom_primitive_tokenizer.hpp
enc_temp_folder/674edff533aad22c1e6696d1ef25a28/: calc.cpp
libcalc/: CMakeLists.txt  cpp.hint
libcalc/include/: FinancialMath.hpp  FunctionMap.hpp  Number.hpp  VarMap.hpp  baseconv.h  calc_exception.hpp  evaluate_rpn.hpp  func.hpp  intmath.hpp  to_rpn.hpp
libcalc/include/helpers/: vec_helpers.h
libcalc/include/tokenizer/: lexer.hpp  primitive_tokenizer.hpp  token.hpp
libcalc/include/tokenizer/types/: LexemeType.h  PrimitiveTokenType.h
libcalc/src/: dummy.cpp
